# napari-imagej

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  dev-environment.yml  environment.yml  explore.py  mkdocs.yml  pyproject.toml  settings.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  test_and_deploy.yml
doc/: Architecture.rst  Benchmarking.rst  Citation.rst  Configuration.rst  Development.rst  Initialization.rst  Install.rst  README.md  Troubleshooting.rst  Usage.rst  Use_Cases.rst  conf.py  environment.yml  index.rst  requirements.txt
doc/examples/: bonej.rst  ops.rst  scripting.rst  trackmate.rst  trackmate_reader.rst
doc/sample-data/: sample_1.tif
docs/: index.md
napari_imagej/: __init__.py  _function.py
napari_imagej/_tests/: test_function.py  test_reader.py  test_writer.py
scripts/Plugins/Examples/: Widget_Demo.js
scripts/examples/: Example_Script.js  Example_Script.py
src/napari_imagej/: __init__.py  __main__.py  _function.py  _helper_widgets.py  _module_utils.py  _napari_converters.py  _ntypes.py  _preprocessor.py  _ptypes.py  config_default.yaml  java.py  model.py  napari.yml  settings.py  settings.toml  setup_imagej.py  widget.py  widget_IJ2.py
src/napari_imagej/_tests/: conftest.py  test_function.py  test_napari_converters.py  test_ntypes.py  test_widget.py
src/napari_imagej/readers/: trackMate_reader.py
src/napari_imagej/resources/: __init__.py
src/napari_imagej/types/: converters.py  enum_likes.py  enums.py  mappings.py  placeholders.py  standins.py  styles.py  type_conversions.py  type_hints.py  type_utils.py  widget_mappings.py  widget_preferences.py
src/napari_imagej/types/converters/: __init__.py  enum_likes.py  enums.py  images.py  labels.py  meshes.py  placeholders.py  points.py  shapes.py  standins.py  trackmate.py
src/napari_imagej/utilities/: _module_utils.py  event_subscribers.py  events.py  logging.py  progress_manager.py
src/napari_imagej/widgets/: action_display.py  focuser.py  info_bar.py  layouts.py  menu.py  napari_imagej.py  parameter_widgets.py  repl.py  result_runner.py  result_tree.py  results.py  searchbar.py  widget_utils.py
src/napari_imagej/widgets/resources/: __init__.py
tests/: conftest.py  test_IJ2GUIWidget.py  test_ImageJWidget.py  test_helper_widgets.py  test_java.py  test_module_utils.py  test_napari_converters.py  test_scripting.py  test_settings.py  test_widget.py  utils.py
tests/types/: test_converters.py  test_enums.py  test_styles.py  test_trackmate.py  test_type_conversions.py  test_widget_mappings.py  test_widget_preferences.py
tests/utilities/: test_module_utils.py  test_progress.py
tests/widgets/: test_action_display.py  test_focuser.py  test_info_bar.py  test_menu.py  test_napari_imagej.py  test_parameter_widgets.py  test_result_runner.py  test_result_tree.py  test_results_table.py  test_searchbar.py  test_widget.py  widget_utils.py
