[metadata]
name = napari-imagej

author = Curtis Rueden
author_email = ctrueden@wisc.edu
license = MIT
url = https://github.com/ctrueden/napari-imagej
description = Use ImageJ functionality from napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/ctrueden/napari-imagej/issues
    Documentation = https://github.com/ctrueden/napari-imagej#README.md
    Source Code = https://github.com/ctrueden/napari-imagej
    User Support = https://github.com/ctrueden/napari-imagej/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari
    pyimagej


[options.entry_points] 
napari.plugin = 
    napari-imagej = napari_imagej
