[metadata]
name = napari-imagej
version = 0.1.0.dev0
author = ImageJ2 developers
author_email = ctrueden@wisc.edu
url = https://github.com/imagej/napari-imagej
license = BSD-3-Clause
description = Use ImageJ functionality from napari
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/imagej/napari-imagej/issues
    Documentation = https://github.com/imagej/napari-imagej#README.md
    Source Code = https://github.com/imagej/napari-imagej
    User Support = https://github.com/imagej/napari-imagej/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    labeling >= 0.1.12
    napari
    magicgui >= 0.4.0
    pyimagej >= 1.2.0

[options.packages.find]
where = src

[options.package_data]
napari-imagej = napari.yml

[options.entry_points] 
napari.manifest = 
    napari-imagej = napari_imagej:napari.yml

[options.extras_require]

# Ensure any changes to this list are also added to environment-test.yml!
dev =
    build
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    pytest-xvfb ; sys_platform == 'linux'
    qtpy
    numpy
