[metadata]
name = napari-imagej
version = 0.1.0.dev0
author = ImageJ2 developers
author_email = ctrueden@wisc.edu
url = https://github.com/imagej/napari-imagej
license = BSD-3-Clause
description = Use ImageJ functionality from napari
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/imagej/napari-imagej/issues
    Documentation = https://github.com/imagej/napari-imagej#README.md
    Source Code = https://github.com/imagej/napari-imagej
    User Support = https://github.com/imagej/napari-imagej/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    confuse
    labeling >= 0.1.12
    # TODO: remove upon next napari release
    imageio != 2.22.1
    napari
    numpy
    magicgui >= 0.5.1
    pyimagej >= 1.3.0
    scyjava >= 1.7.0

[options.packages.find]
where = src

[options.package_data]
napari-imagej = napari.yml

[options.entry_points] 
napari.manifest = 
    napari-imagej = napari_imagej:napari.yml

[options.extras_require]

# Ensure any changes to this list are also added to environment-test.yml!
dev =
    autopep8
    black
    build
    flake8
    isort
    pyqt5
    pytest
    pytest-cov
    pytest-env
    pytest-qt
    qtpy
    numpy

[flake8]
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 88
extend-ignore = E203